Avances con updateDatabase, problemas con tabla Opciones