@@ -1,8 +1,8 @@
-package edu.um.alumno.service;
+package um.edu.ar.service;
 
-import edu.um.alumno.service.dto.DispositivoDTO;
-import java.io.FileReader;
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.Executors;
@@ -19,9 +19,7 @@ import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
-import um.edu.ar.service.DispositivoService;
 import um.edu.ar.service.dto.DispositivoDTO;
-import um.edu.ar.service.dto.MapperDispositivoDTO;
 
 @Service
 public class UpdateDatabase {
@@ -33,13 +31,16 @@ public class UpdateDatabase {
     @Autowired
     private DispositivoService dispositivoService;
 
-    @Autowired
-    private RestTemplate restTemplate;
+    private final RestTemplate restTemplate;
 
-    // Cargar token desde el archivo token.json
+    public UpdateDatabase() {
+        this.restTemplate = new RestTemplate();
+    }
+
     private String loadTokenFromFile() {
-        try (FileReader reader = new FileReader("token.json")) {
-            JSONObject jsonObject = new JSONObject(new String(reader.readAllBytes()));
+        try {
+            byte[] bytes = Files.readAllBytes(Paths.get("token.json"));
+            JSONObject jsonObject = new JSONObject(new String(bytes));
             return jsonObject.getString("token");
         } catch (IOException e) {
             LOG.error("Error loading token from file", e);
@@ -47,7 +48,6 @@ public class UpdateDatabase {
         }
     }
 
-    // Método que se ejecuta al iniciar la aplicación
     @EventListener(ApplicationReadyEvent.class)
     public void initialize() {
         LOG.info("Initializing UpdateDatabase service");
@@ -55,27 +55,26 @@ public class UpdateDatabase {
         startScheduledSync();
     }
 
-    // Sincronizar datos con la API usando el token
     public void syncData() {
         LOG.info("Starting data sync");
 
-        String token = loadTokenFromFile(); // Cargar el token desde el archivo
+        String token = loadTokenFromFile();
         HttpHeaders headers = new HttpHeaders();
-        headers.setBearerAuth(token); // Añadir el token como Authorization: Bearer
+        headers.setBearerAuth(token);
         HttpEntity<String> entity = new HttpEntity<>(headers);
 
         try {
-            // Realizar la solicitud GET a la URL de dispositivos
             ResponseEntity<List<DispositivoDTO>> response = restTemplate.exchange(
                 DEVICES_URL,
                 HttpMethod.GET,
                 entity,
-                new ParameterizedTypeReference<List<DispositivoDTO>>() {}
+                new ParameterizedTypeReference<>() {}
             );
 
             if (response.getStatusCode() == HttpStatus.OK && response.getBody() != null) {
                 List<DispositivoDTO> devices = response.getBody();
                 LOG.info("Data sync successful, {} devices retrieved", devices.size());
+                LOG.info(devices.toString());
                 updateLocalDatabase(devices);
             } else {
                 LOG.error("Failed to sync data, status code: {}", response.getStatusCode());
@@ -87,30 +86,26 @@ public class UpdateDatabase {
         }
     }
 
-    // Iniciar la sincronización programada cada 15 minutos
     private void startScheduledSync() {
         LOG.info("Starting scheduled data sync every 15 minutes");
         ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(1);
         scheduler.scheduleAtFixedRate(this::syncData, 0, 15, TimeUnit.MINUTES);
     }
 
-    // Actualizar la base de datos local con los dispositivos obtenidos de la API
-    private void updateLocalDatabase(List<DispositivoDTO> devices) {
+    void updateLocalDatabase(List<DispositivoDTO> devices) {
         LOG.info("Updating local database with {} devices", devices.size());
-
-        List<MapperDispositivoDTO> localDevices = dispositivoService.findAllNoPag();
-        Map<Long, MapperDispositivoDTO> localDeviceMap = localDevices
+        List<DispositivoDTO> localDevices = dispositivoService.findAllNoPag();
+        Map<Long, DispositivoDTO> localDeviceMap = localDevices
             .stream()
-            .collect(Collectors.toMap(MapperDispositivoDTO::getId, dispositivo -> dispositivo));
+            .collect(Collectors.toMap(DispositivoDTO::getId, dispositivo -> dispositivo));
 
         for (DispositivoDTO remoteDevice : devices) {
-            MapperDispositivoDTO localDevice = localDeviceMap.get(remoteDevice.getId());
-            if (localDevice == null || !localDevice.equals(remoteDevice)) {
-                dispositivoService.save(remoteDevice);
-                LOG.info("Device updated: {}", remoteDevice.getId());
-            }
+            DispositivoDTO localDevice = localDeviceMap.get(remoteDevice.getId());
+            //            if (localDevice == null || !localDevice.equals(remoteDevice)) {
+            //                dispositivoService.save(remoteDevice);
+            //                LOG.info("Device updated: {}", remoteDevice.getId());
+            //            }
         }
-
         LOG.info("Local database updated successfully");
     }
 }
